--- a/wines/templates/wines/wine_details.html
+++ b/wines/templates/wines/wine_details.html
@@ -22,7 +22,7 @@
             <p>{{wine.grape}}</p>
             <h5 class="fw-bold">{% trans "Procesul de obtinere"%}</h5>
             <hr class="my-0">
-            <p>{{wine.vinification}}</p>
+            <p>{{wine_details.vinification}}</p>
         </div>
         <div class="order-sm-0 col-sm-12 col-lg-4">
             <div class="row">
@@ -72,32 +72,32 @@
         <div class="col-sm-12 d-md-none">
             <h5 class="fw-bold">{% trans "Regiunea" %}</h5>
             <hr class="my-0">
-            <p>{{wine.region}}</p>
+            <p>{{wine_details.region}}</p>
             <h5 class="fw-bold">{% trans "Struguri" %}</h5>
             <hr class="my-0">
-            <p>{{wine.grape}}</p>
+            <p>{{wine_details.grape}}</p>
             <h5 class="fw-bold">{% trans "Procesul de obtinere" %}</h5>
             <hr class="my-0">
-            <p>{{wine.vinification}}</p>
+            <p>{{wine_details.vinification}}</p>
             <!-- imaginea cu vinul-->
         </div>
         <div class="col-sm-12 col-lg-4 ">
             <!--detalii despre vin-->
             <h5 class="fw-bold">{% trans "Gustul" %}</h5>
             <hr class="my-0">
-            <p>{{wine.palate}}</p>
+            <p>{{wine_details.palate}}</p>
             <h5 class="fw-bold">{% trans "Maturare" %}</h5>
             <hr class="my-0">
-            <p>{{ wine.aging }}</p>
+            <p>{{ wine_details.aging }}</p>
             <h5 class="fw-bold">{% trans "Descrierea culorii" %}</h5>
             <hr class="my-0">
-            <p>{{ wine.color_details}}</p>
+            <p>{{ wine_details.color_details}}</p>
             <h5 class="fw-bold">{% trans "Temperatura de servire"%} </h5>
             <hr class="my-0">
-            <p>{{ wine.serving }}</p>
+            <p>{{ wine_details.serving }}</p>
             <h5 class="fw-bold">{% trans "Impachetarea"%}</h5>
             <hr class="my-0">
-            <p>{{ wine.boxing }}</p>
+            <p>{{ wine_details.boxing }}</p>
             <h5 class="fw-bold">{% trans "Ratingul Producatorului"%}</h5>
             <hr class="my-0">
             <p>{{ wine.rating }} <i class="fas fa-star fa-sm"></i></p>
