--- a/templates/base.html
+++ b/templates/base.html
@@ -87,7 +87,7 @@
             <div class="container-fluid">
                 <!-- Brand -->
                 <a class="navbar-brand text-dark d-lg-none brand" href="{% url 'home' %}">Grupo Pierola Romania</a>
-                <form action="{% url 'set_language' %}" method="post" id="language-selector" class="fs-5">
+                <form action="{% url 'set_language' %}" method="post" id="language-selector" class="fs-5 d-lg-none">
                     {% csrf_token %}
                     <select name="language" id="language-selector" class="text-danger border-danger">
                     {% get_current_language as LANGUAGE_CODE %}
