--- a/offers/templates/offers/offer_details.html
+++ b/offers/templates/offers/offer_details.html
@@ -12,7 +12,7 @@
         </div>
         <div class="row">
             <div class="col-12">
-                <div class="jumbotron jumbotron-fluid p-5 m-1 offer-img" style="background: url({{offer.image.url}});background-position:center; background-size: cover; color:{{offer.text_color}}">
+                <div class="jumbotron jumbotron-fluid p-5 m-1 offer-img" style="background: url({{offer.image_url}});background-position:center; background-size: cover; color:{{offer.text_color}}">
                     <div class="container">
                         <h1 class="display-4">{{offer.title}}</h1>
                         <p class="lead">{{offer.hook}}</p>
