--- a/offers/templates/offers/offers.html
+++ b/offers/templates/offers/offers.html
@@ -17,7 +17,7 @@
         <h3>{% trans "Oferte in curs" %}</h3>
         {% for offer in available_offers %}
         <div class="col-12">
-            <div class="jumbotron jumbotron-fluid p-5 m-1 offer-img" style="background: url({{offer.image.url}});background-position:center; background-size: cover; color:{{offer.text_color}}">
+            <div class="jumbotron jumbotron-fluid p-5 m-1 offer-img" style="background: url({{offer.image_url}});background-position:center; background-size: cover; color:{{offer.text_color}}">
                 <div class="container">
                     <h1 class="display-4">
                         {{offer.title}}
@@ -44,7 +44,7 @@
             <h3>{% trans "Oferte care au avut loc" %}</h3>
             {% for offer in off_offers %}
             <div class="col-12">
-                <div class="jumbotron jumbotron-fluid p-5 m-1 offer-img" style="background: url({{offer.image.url}});background-position:center; background-size: cover; color:{{offer.text_color}}">
+                <div class="jumbotron jumbotron-fluid p-5 m-1 offer-img" style="background: url({{offer.image_url}});background-position:center; background-size: cover; color:{{offer.text_color}}">
                     <div class="container">
                         <h1 class="display-4 ">
                             {{offer.title}}
