--- a/offers/templates/offers/offers.html
+++ b/offers/templates/offers/offers.html
@@ -26,7 +26,7 @@
                         {{offer.hook}}
                     </p>
                     <p class="lead">
-                        <a class="btn btn-danger btn-lg float-right rounded-0 " href="{% url 'offer_details' offer.id %}" role="button">Afla mai multe <i class="fas fa-chevron-right"></i></a>
+                        <a class="btn btn-danger btn-lg float-right rounded-0 " href="{% url 'offer_details' offer.id %}" role="button">{% trans "Afla mai multe" %} <i class="fas fa-chevron-right"></i></a>
                     </p>
                 </div>
             </div>
