--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -1,11 +1,10 @@
+{% load i18n %}
 <div class="toast custom-toast rounded-0 border-top-0" role="alert" aria-live="assertive" aria-atomic="true">
     <div class="arrow-up arrow-success"></div>
     <div class="w-100 toast-capper bg-success"></div>
     <div class="toast-header bg-white text-dark d-flex justify-content-between">
-        <strong class="mr-auto">Success!</strong>
-        <button type="button" class="btn-close close" data-dismiss="toast" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
+        <strong class="mr-auto">{% trans "Success"  %}!</strong>
+        <button type="button" class="btn-close close ml-2 mb-1 text-dark" data-bs-dismiss="toast" aria-label="Close"></button>
     </div>
     <div class="toast-body bg-white">
         <div class="row">
