--- a/templates/includes/toasts/toast_warning.html
+++ b/templates/includes/toasts/toast_warning.html
@@ -1,10 +1,10 @@
-<div class="toast custom-toast rounded-0 border-top-0" data-autohide="false">
+{% load i18n %}
+<div class="toast custom-toast rounded-0 border-top-0" role="alert" aria-live="assertive" aria-atomic="true" data-autohide="false">
     <div class="arrow-up arrow-warning"></div>
     <div class="w-100 toast-capper bg-warning"></div>
     <div class="toast-header bg-white text-dark d-flex justify-content-between">
         <strong class="mr-auto">{% trans "Warning!" %}</strong>
-        <button type="button" class="btn-close close ml-2 mb-1 text-dark" data-dismiss="toast" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
+        <button type="button" class="btn-close close ml-2 mb-1 text-dark" data-bs-dismiss="toast" aria-label="Close">
         </button>
     </div>
     <div class="toast-body bg-white">
