--- a/templates/base.html
+++ b/templates/base.html
@@ -26,18 +26,18 @@
         <nav class="navbar navbar-expand-lg d-none d-lg-block p-0">
             <div class="container-fluid">
                 <a class="navbar-brand text-dark pt-3 brand" href="{% url 'home' %}">Grupo Pierola Romania</a>
-                            
+
                 <ul class="navbar-nav font-header">
                     <li class="nav-item my-auto">
-                        <form action="{% url 'set_language' %}" method="post" id="language-selector">
+                        <form action="{% url 'set_language' %}" method="post" class="language-selector">
                             {% csrf_token %}
-                            <select name="language" id="language-selector" class="text-danger border-danger">
+                            <select name="language" class="text-danger border-danger">
                                 {% get_current_language as LANGUAGE_CODE %}
                                 {% get_available_languages as LANGUAGES %}
                                 {% get_language_info_list for LANGUAGES as languages %}
                                 {% for language in languages %}
                                 <option value="{{ language.code }}" {% if language.code == LANGUAGE_CODE %} selected{% endif %}>
-                                    {{ language.code }}
+                                    {{ language.name }}
                                 </option>
                                 {% endfor %}
                             </select>
@@ -87,19 +87,7 @@
             <div class="container-fluid">
                 <!-- Brand -->
                 <a class="navbar-brand text-dark d-lg-none brand" href="{% url 'home' %}">Grupo Pierola Romania</a>
-                <form action="{% url 'set_language' %}" method="post" id="language-selector" class="fs-5 d-lg-none">
-                    {% csrf_token %}
-                    <select name="language" id="language-selector" class="text-danger border-danger">
-                    {% get_current_language as LANGUAGE_CODE %}
-                    {% get_available_languages as LANGUAGES %}
-                    {% get_language_info_list for LANGUAGES as languages %}
-                    {% for language in languages %}
-                        <option value="{{ language.code }}" {% if language.code == LANGUAGE_CODE %} selected{% endif %}>
-                            {{ language.code }}
-                            </option>
-                    {% endfor %}
-                    </select>
-                </form>
+
                 <!-- Menu Button-->
                 <button class="navbar-toggler p-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -138,7 +126,23 @@
                                 <i class="fas fa-shopping-cart text-danger "></i> {{total}} RON
                             </a>
                         </li>
-                            <!-- Search bar -->
+                        <li class="nav-item d-lg-none">
+                            <form action="{% url 'set_language' %}" method="post" class="language-selector">
+                                {% csrf_token %}
+                                <select name="language" class="text-danger border-danger">
+                                    {% get_current_language as LANGUAGE_CODE %}
+                                    {% get_available_languages as LANGUAGES %}
+                                    {% get_language_info_list for LANGUAGES as languages %}
+                                    {% for language in languages %}
+                                    <option value="{{ language.code }}" {% if language.code == LANGUAGE_CODE %} selected{% endif %}>
+                                        {{ language.name }}
+                                    </option>
+                                    {% endfor %}
+                                </select>
+                            </form>
+                        </li>
+
+                        <!-- Search bar -->
                         <li class="nav-item my-auto">
                             <form method="GET" action="{% url 'wines_view' %}">
                                 <div class="input-group input-group-sm">
@@ -179,18 +183,19 @@
     {% endblock %}
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+    <script type="text/javascript">
+        Array.from(document.getElementsByClassName('language-selector')).forEach(function (search) {
+            search.addEventListener('change', (e) => {
+                search.submit()
+            })
+        })
+        const toastLive = document.querySelector('.toast');
+        const toast = new bootstrap.Toast(toastLive);
+        toast.show();
+
+    </script>
 </body>
-<script type="text/javascript">
-        document.getElementById('language-selector').addEventListener('change', (e) => {
-        console.log('working good');
-        document.getElementById('language-selector').submit()
-    })
 
-    const toastLive = document.querySelector('.toast');
-    const toast = new bootstrap.Toast(toastLive);
-    toast.show();
-
-</script>
 
 {% block postload_js %}
 
