Bug fix console error when no toast was used

--- a/templates/base.html
+++ b/templates/base.html
@@ -158,23 +158,19 @@
     </header>
 
     <div class="content-zone pt-3">
-        {% if messages %}
-        <div class="message-container">
-            {% for message in messages %}
-            {% with message.level as level %}
-            {% if level == 40 %}
-            {% include 'includes/toasts/toast_error.html' %}
-            {% elif level == 30 %}
-            {% include 'includes/toasts/toast_warning.html' %}
-            {% elif level == 25 %}
-            {% include 'includes/toasts/toast_success.html' %}
-            {% else %}
-            {% include 'includes/toasts/toast_info.html' %}
-            {% endif %}
-            {% endwith %}
-            {% endfor %}
-        </div>
+        {% for message in messages %}
+        {% with message.level as level %}
+        {% if level == 40 %}
+        {% include 'includes/toasts/toast_error.html' %}
+        {% elif level == 30 %}
+        {% include 'includes/toasts/toast_warning.html' %}
+        {% elif level == 25 %}
+        {% include 'includes/toasts/toast_success.html' %}
+        {% else %}
+        {% include 'includes/toasts/toast_info.html' %}
         {% endif %}
+        {% endwith %}
+        {% endfor %}
         {% block content %}
         {% endblock %}
     </div>
@@ -190,8 +186,11 @@
             })
         })
         const toastLive = document.querySelector('.toast');
-        const toast = new bootstrap.Toast(toastLive);
-        toast.show();
+        if (toastLive !== null) {
+            const toast = new bootstrap.Toast(toastLive);
+            toast.show();
+        }
+
 
     </script>
 </body>
