--- a/wines/templates/wines/includes/desktop_filters.html
+++ b/wines/templates/wines/includes/desktop_filters.html
@@ -1,22 +1,20 @@
 {% load i18n %}
-<div class="pb-2 wine-filter-menu fixed-top rounded d-none">
+<div class="col-12 pb-2 wine-filter-menu rounded d-none d-lg-block">
     <h4 class="text-center my-2">{% trans "Ordoneaza dupa "%}</h4>
     <div class="container-fluid">
-        <div class="row mb-1">
-            <div class="col-12">
-                <div class="form-floating text-dark">
-                    <select class="form-select" id="color" aria-label="Floating label select example">
+        <div class="row ">
+            <div class="col">
+                <div class="form-floating">
+                    <select class="form-select " id="color" aria-label="Floating label select example">
                         <option value="reset">{% trans "Oricare"%}</option>
                         {% for color in colors %}
-                        <option value="{{color}}" {% if color in categories %}selected{% endif %}>{% trans color %}</option>
+                        <option value="{{color.name}}" {% if color.name in categories %}selected{% endif %}>{{color.name}}</option>
                         {% endfor %}
                     </select>
                     <label for="color">{% trans "Culoare" %}</label>
                 </div>
             </div>
-        </div>
-        <div class="row mb-1">
-            <div class="col-12">
+            <div class="col">
                 <div class="form-floating text-dark">
                     <select class="form-select" id="region" aria-label="Floating label select example">
                         <option value="reset">{% trans "Oricare"%}</option>
@@ -27,9 +25,7 @@
                     <label for="region">{% trans "Regiunea"%}</label>
                 </div>
             </div>
-        </div>
-        <div class="row mb-1">
-            <div class="col-12">
+            <div class="col">
                 <div class="form-floating text-dark">
                     <select class="form-select" id="grape">
                         <option value="reset">{% trans "Oricare"%}</option>
@@ -42,9 +38,7 @@
                     <label for="grape">{% trans "Struguri"%}</label>
                 </div>
             </div>
-        </div>
-        <div class="row mb-1">
-            <div class="col-12">
+            <div class="col">
                 <div class="form-floating text-dark">
                     <select class="form-select" id="price" aria-label="Floating label select example">
                         <option value="reset">Aleatoriu</option>
@@ -54,9 +48,7 @@
                     <label for="price">{% trans "Pret"%}</label>
                 </div>
             </div>
-        </div>
-        <div class="row mb-1">
-            <div class="col-12">
+            <div class="col">
                 <div class="form-floating text-dark">
                     <select class="form-select" id="rating" aria-label="Floating label select example">
                         <option value="reset">{% trans "Aleatoriu"%}</option>
@@ -67,5 +59,5 @@
                 </div>
             </div>
         </div>
-    </div>
+     </div>
 </div>
