--- a/wines/templates/wines/wines.html
+++ b/wines/templates/wines/wines.html
@@ -8,8 +8,12 @@
 
 <div class="container-fluid wine-list" id="winelist">
     <h1 class="text-center">{% trans "Vinuri"%}</h1>
-    {% include 'wines/includes/mobile_filters.html' %}
-    <span class="badge badge-pill badge-warning">{% trans "Warning"%}</span>
+    <div class="row">
+        {% include 'wines/includes/desktop_filters.html' %}
+        {% include 'wines/includes/mobile_filters.html' %}
+    </div>
+
+
     <div class="row">
         {% if not wines %}
         <p class="text-center">Nici un rezultat</p>
