--- a/security/templates/security/requirements.html
+++ b/security/templates/security/requirements.html
@@ -11,13 +11,13 @@
 
     <title>Cerinte</title>
 </head>
-<body>
+<body class="position-absolute top-50 start-50 translate-middle">
     <h1 class="mt-3 text-center"><a class="brand text-dark text-decoration-none  " href="{% url 'home' %}">Grupo Pierola Romania</a></h1>
     <div class="d-flex justify-content-center">
-        <div>
-            Language:
+        <div class="mx-1">
+            <label for="language-selector">Language: </label>
         </div>
-        <div>
+        <div class="mx-1">
             <form action="{% url 'set_language' %}" method="post" id="language-selector">
                 {% csrf_token %}
                 <select name="language" id="language-selector">
@@ -26,14 +26,15 @@
                     {% get_language_info_list for LANGUAGES as languages %}
                     {% for language in languages %}
                     <option value="{{ language.code }}" {% if language.code == LANGUAGE_CODE %} selected{% endif %}>
-                        {{ language.code }}
+                        {{ language.name }}
                     </option>
                     {% endfor %}
                 </select>
             </form>
         </div>
     </div>
-    
+           
+            
     <div class="container pt-5">
         <h5 class="text-center mb-5">{% trans "Pentru a putea naviga acest website trebuie sa indeplinesti urmatoarele:" %}</h5>
         <h6 class="text-center">{% trans "Sa ai cel putin 18 ani impliniti" %}</h6>
