--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -41,11 +41,13 @@
                 <div class="row">
                     <div class="col-12 col-md-4">
                         <div class="row d-flex justify-content-between">
-                            <div class="col-auto ">
-                                <a class="btn btn-info rounded-0 text-light" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+                            <div class="col-auto">
+                                <button class="btn btn-danger    rounded-0" type="submit">{% trans "Sign In" %}</button>
                             </div>
                             <div class="col-auto">
-                                <button class="btn btn-dark rounded-0" type="submit">{% trans "Sign In" %}</button>
+                                <div class="my-2">
+                                    <a class="link-secondary text-decoration-none " href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+                                </div>
                             </div>
                         </div>
                         <h6 class="small text-center mt-3"> Or sign in with : </h6>
