--- a/templates/allauth/socialaccount/snippets/provider_list.html
+++ b/templates/allauth/socialaccount/snippets/provider_list.html
@@ -1,21 +1,29 @@
 {% load socialaccount %}
 
 {% get_providers as socialaccount_providers %}
-<div class="row d-flex justify-content-between">
+<div class="row d-flex justify-content-center">
     {% for provider in socialaccount_providers %}
-    {% if provider.id == "openid" %}
-    {% for brand in provider.get_brands %}
+        {% if provider.id == "openid" %}
+            {% for brand in provider.get_brands %}
 
-    <div class="col-auto">
-        <a title="{{brand.name}}"
-           class="socialaccount_provider {{provider.id}} {{brand.id}}"
-           href="{% provider_login_url provider.id openid=brand.openid_url process=process %}">{{brand.name}}</a>
-    </div>
-    {% endfor %}
-    {% endif %}
-    <div class="col-auto">
-        <a title="{{provider.name}}" class="btn btn-secondary rounded-0 socialaccount_provider {{provider.id}}"
-           href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}">{{provider.name}}</a>
-    </div>
+            <div class="col-auto">
+                <a title="{{brand.name}}"
+                   class="socialaccount_provider {{provider.id}} {{brand.id}}"
+                   href="{% provider_login_url provider.id openid=brand.openid_url process=process %}">{{brand.name}}</a>
+            </div>
+            {% endfor %}
+        {% endif %}
+        <div class="col-auto ">
+            <a title="{{provider.name}}" class="btn btn-light p-0 rounded-0 socialaccount_provider {{provider.id}}"
+               href="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}">
+                {% if provider.name == 'Google' %}
+                <ion-icon class="pt-2 px-2" name="logo-google"></ion-icon>
+                {% elif provider.name == 'Apple' %}
+                <ion-icon class="pt-2 px-2" name="logo-apple"></ion-icon>
+                {% else %}
+                {{provider.name}}
+                {% endif %}
+            </a>
+        </div>
     {% endfor %}
 </div>
