--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,8 @@
     <script src="https://js.stripe.com/v3/"></script>
     <script src="https://kit.fontawesome.com/8e8a0aa5cf.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <title>GPR {%block title %}{% endblock %}</title>
 </head>
 <body>
